Added three package to the project.

--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
       <br />
       <br />
       <button id="startButton">Click To Play</button>
-      <p>'Player' model and animations are taken from <a href="https://www.mixamo.com" target="_blank" rel="nofollow noreferrer">Mixamo</a></p>
+      <p>Player model and animations are taken from <a href="https://www.mixamo.com" target="_blank" rel="nofollow noreferrer">Mixamo</a></p>
     </div>
-    <script type="module" src="/src/game_manager.ts"></script>
+    <script type="module" src="/src/GameManager.ts"></script>
   </body>
 </html>
