--- a/index.html
+++ b/index.html
@@ -4,13 +4,12 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/test.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Obstacle Course</title>
+    <title>3D Obstacle Course</title>
   </head>
   <body>
     <div id="loader"></div>
     <div id="instructions" style="display: none;">
       <h1>Obstacle Course</h1>
-      <h2>Part 1</h2>
       <p>Get to the end and be the best</p>
       <kbd>W</kbd>&nbsp;<kbd>A</kbd>&nbsp;<kbd>S</kbd>&nbsp;<kbd>D</kbd> to move
       <br />
