Added new platforms

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
   </head>
   <body>
     <div id="loader"></div>
+    <div id="timer" style="display: none">0</div>
+    <div id="level" style="display: none">Level Completed. Well Done!</div>
     <div id="instructions" style="display: none;">
       <h1>Obstacle Course</h1>
       <p>Get to the end and be the best</p>
